--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -45,7 +45,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         sdk: [dev]
-        shard: [0, 1, 2, 3, 4, 5, 6]
+        shard: [5]
     steps:
       - uses: actions/checkout@v2
       - uses: dart-lang/setup-dart@v1.2
